--- a/package.json
+++ b/package.json
@@ -1,121 +1,49 @@
 {
-    "name": "aurelia-configuration",
-    "version": "2.0.0",
-    "description": "An Aurelia plugin for adding in configuration to your application.",
-    "keywords": [
-        "aurelia",
-        "config",
-        "configuration"
-    ],
-    "main": "dist/commonjs/index.js",
-    "typings": "dist/commonjs/index.d.ts",
-    "scripts": {
-        "lint": "cross-env tslint --project tsconfig.json",
-        "pretest": "cross-env npm run lint",
-        "test": "cross-env tsc && karma start --single-run",
-        "test-watch": "concurrently \"./node_modules/.bin/tsc --watch\" \"./node_modules/.bin/karma start\"",
-        "prebuild:amd": "cross-env rimraf dist/amd",
-        "build:amd": "cross-env tsc --project tsconfig.build.json --outDir dist/amd --module amd",
-        "postbuild:amd": "cross-env copyfiles --up 1 src/**/*.html src/**/*.css dist/amd",
-        "prebuild:commonjs": "cross-env rimraf dist/commonjs",
-        "build:commonjs": "cross-env tsc --project tsconfig.build.json --outDir dist/commonjs --module commonjs",
-        "postbuild:commonjs": "cross-env copyfiles --up 1 src/**/*.html src/**/*.css dist/commonjs",
-        "prebuild:es2015": "cross-env rimraf dist/es2015",
-        "build:es2015": "cross-env tsc --project tsconfig.build.json --outDir dist/es2015 --module es2015",
-        "postbuild:es2015": "cross-env copyfiles --up 1 src/**/*.html src/**/*.css dist/es2015",
-        "prebuild:native-modules": "cross-env rimraf dist/native-modules",
-        "build:native-modules": "cross-env tsc --project tsconfig.build.json --outDir dist/native-modules --module es2015",
-        "postbuild:native-modules": "cross-env copyfiles --up 1 src/**/*.html src/**/*.css dist/native-modules",
-        "prebuild:system": "cross-env rimraf dist/system",
-        "build:system": "cross-env tsc --project tsconfig.build.json --outDir dist/system --module system",
-        "postbuild:system": "cross-env copyfiles --up 1 src/**/*.html src/**/*.css dist/system",
-        "prebuild": "cross-env rimraf dist",
-        "build": "concurrently \"npm run build:amd\" \"npm run build:commonjs\" \"npm run build:es2015\" \"npm run build:native-modules\" \"npm run build:system\"",
-        "changelog": "cross-env conventional-changelog -p angular -i doc/CHANGELOG.md -s",
-        "bump-version": "npm --no-git-tag-version version",
-        "preprepare-release": "cross-env npm run test",
-        "prepare-release": "cross-env npm run changelog && npm run build"
-    },
-    "repository": {
-        "type": "git",
-        "url": "http://github.com/Vheissu/Aurelia-Configuration"
-    },
-    "author": "Dwayne Charrington <dwaynecharrington@gmail.com>",
-    "license": "MIT",
-    "homepage": "https://github.com/Vheissu/aurelia-configuration",
-    "bugs": {
-        "url": "https://github.com/Vheissu/aurelia-configuration/issues"
-    },
-    "jspm": {
-        "registry": "npm",
-        "jspmPackage": true,
-        "main": "index",
-        "format": "amd",
-        "directories": {
-            "dist": "dist/amd"
-        },
-        "peerDependencies": {
-            "aurelia-binding": "^2.1.7",
-            "aurelia-dependency-injection": "^1.4.1",
-            "aurelia-framework": "^1.3.0",
-            "aurelia-loader": "^1.0.0",
-            "aurelia-logging": "^1.5.0",
-            "aurelia-metadata": "^1.0.4",
-            "aurelia-pal": "^1.8.0",
-            "aurelia-path": "^1.1.1",
-            "aurelia-task-queue": "^1.3.1",
-            "aurelia-templating": "^1.10.1",
-            "aurelia-templating-binding": "^1.5.2"
-        },
-        "dependencies": {
-            "aurelia-binding": "^2.1.7",
-            "aurelia-dependency-injection": "^1.4.1",
-            "aurelia-framework": "^1.3.0",
-            "aurelia-loader": "^1.0.0",
-            "aurelia-logging": "^1.5.0",
-            "aurelia-metadata": "^1.0.4",
-            "aurelia-pal": "^1.8.0",
-            "aurelia-path": "^1.1.1",
-            "aurelia-task-queue": "^1.3.1",
-            "aurelia-templating": "^1.10.1",
-            "aurelia-templating-binding": "^1.5.2"
-        },
-        "devDependencies": {}
-    },
-    "dependencies": {
-        "aurelia-binding": "^2.1.7",
-        "aurelia-dependency-injection": "^1.4.1",
-        "aurelia-framework": "^1.3.0",
-        "aurelia-loader": "^1.0.0",
-        "aurelia-logging": "^1.5.0",
-        "aurelia-metadata": "^1.0.4",
-        "aurelia-pal": "^1.8.0",
-        "aurelia-path": "^1.1.1",
-        "aurelia-task-queue": "^1.3.1",
-        "aurelia-templating": "^1.10.1",
-        "aurelia-templating-binding": "^1.5.2"
-    },
-    "devDependencies": {
-        "@types/jasmine": "^3.3.0",
-        "@types/node": "^10.12.11",
-        "aurelia-bootstrapper": "^2.3.1",
-        "aurelia-pal-browser": "^1.8.0",
-        "aurelia-polyfills": "^1.3.0",
-        "aurelia-testing": "^1.0.0",
-        "concurrently": "^4.1.0",
-        "conventional-changelog-cli": "^2.0.11",
-        "copyfiles": "^2.1.0",
-        "cross-env": "^5.2.0",
-        "jasmine-core": "^3.3.0",
-        "karma": "^3.1.3",
-        "karma-chrome-launcher": "^2.2.0",
-        "karma-ie-launcher": "^1.0.0",
-        "karma-jasmine": "^2.0.1",
-        "karma-requirejs": "^1.1.0",
-        "requirejs": "^2.3.6",
-        "requirejs-text": "^2.0.15",
-        "rimraf": "^2.6.2",
-        "tslint": "^5.11.0",
-        "typescript": "^3.2.1"
-    }
+  "name": "zz",
+  "description": "An Aurelia 2 client application.",
+  "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "???"
+  },
+  "license": "UNLICENSED",
+  "dependencies": {
+    "aurelia": "dev"
+  },
+  "devDependencies": {
+    "@aurelia/testing": "dev",
+    "@aurelia/webpack-loader": "dev",
+    "@types/node": "^14.14.16",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "autoprefixer": "^10.1.0",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.16.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "htmlhint": "^0.14.2",
+    "postcss": "^8.2.1",
+    "postcss-loader": "^4.1.0",
+    "rimraf": "^3.0.2",
+    "sass": "^1.30.0",
+    "sass-lint": "^1.13.1",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.12",
+    "typescript": "^4.1.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.11.0",
+    "webpack-bundle-analyzer": "^4.3.0",
+    "webpack-cli": "^4.3.0",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "scripts": {
+    "lint:js": "eslint src test --ext .js,.ts",
+    "lint:css": "sass-lint -c .sass-lint.yml \"src/**/*.scss\"",
+    "lint:html": "htmlhint -c .htmlhintrc src",
+    "lint": "npm run lint:js && npm run lint:html && npm run lint:css",
+    "start": "webpack serve",
+    "build": "rimraf dist && webpack --env production",
+    "analyze": "rimraf dist && webpack --env production --analyze"
+  }
 }
