WIP - Initial actions to be able to load the extension
* update packages, use AU 2.0.0-beta.22

* Fix aurelia build

* update manifest to validate by browser

TODO: Properly inject script the v3 way

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,13 @@
 {
   "compilerOptions": {
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
+    "module": "esnext",
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "rootDir": "src",
-    "target": "ESNext",
-    "allowJs": true,
+    "target": "ES2017",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "module": "ESNext"
+    "importHelpers": true,
+    "sourceMap": true
   },
   "include": ["test", "src"],
   "files": ["src/resource.d.ts"]
