--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Aurelia 2 Inspector",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "A Chrome plugin adding a new inspector pane to the Elements panel, providing Aurelia-specific information about selected elements.",
   "devtools_page": "devtools.html",
   "icons": {
@@ -9,7 +9,17 @@
     "48": "images/48.png",
     "128": "images/128.png"
   },
-  "web_accessible_resources": ["devtools.html", "devtools-background.html"],
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "devtools.html",
+        "devtools-background.html"
+      ],
+      "matches": [
+        "*://*/*"
+      ]
+    }
+  ],
   "content_scripts": [
     {
       "all_frames": true,
@@ -22,10 +32,9 @@
       "matches": ["<all_urls>"],
       "js": ["build/detector.js"],
       "run_at": "document_start"
-    }   
-
+    }
   ],
-  "browser_action": {
+  "action": {
     "default_icon": {
       "16": "images/16-GREY.png",
       "48": "images/48-GREY.png",
@@ -35,9 +44,11 @@
     "default_popup": "popups/missing.html"
   },
   "background": {
-    "scripts": ["build/background.js"],
-    "persistent": false
+    "service_worker": "build/background.js"
   },
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
-  "permissions": ["file:///*", "http://*/*", "https://*/*"]
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self';",
+    "sandbox": "sandbox allow-scripts allow-forms allow-popups allow-modals; script-src 'self' 'unsafe-inline' 'unsafe-eval'; child-src 'self';"
+  },
+  "host_permissions": ["file:///*", "http://*/*", "https://*/*"]
 }
