--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aurelia-inspector",
+  "name": "chrome-test",
   "description": "Aurelia 2 Inspector",
   "version": "0.1.0",
   "repository": {
