--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,6 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "build/contentscript.js",
         "devtools.html",
         "devtools-background.html"
       ],
@@ -25,16 +24,9 @@
     {
       "all_frames": true,
       "matches": ["<all_urls>"],
-      "js": ["build/contentscript.js", "build/test-script.js"],
+      "js": ["build/contentscript.js"],
       "run_at": "document_start"
     }   ,
-    {
-      "all_frames": true,
-      "matches": ["<all_urls>"],
-      "js": ["build/test-script.js"],
-      "run_at": "document_start",
-      "world": "MAIN"
-    },
     {
       "all_frames": true,
       "matches": ["<all_urls>"],
@@ -58,6 +50,5 @@
     "extension_pages": "script-src 'self'; object-src 'self';",
     "sandbox": "sandbox allow-scripts allow-forms allow-popups allow-modals; script-src 'self' 'unsafe-inline' 'unsafe-eval'; child-src 'self';"
   },
-  "permissions": ["scripting", "activeTab"],
   "host_permissions": ["file:///*", "http://*/*", "https://*/*"]
 }
