--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "aurelia": "2.0.0-beta.22"
   },
   "devDependencies": {
+    "@aurelia/testing": "latest",
     "@aurelia/webpack-loader": "^2.0.0-beta.22",
     "@types/chrome": "0.0.290",
     "@types/jest": "^26.0.19",
+    "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
     "autoprefixer": "^10.1.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^6.7.1",
+    "eslint": "^9.17.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "htmlhint": "^0.14.2",
@@ -28,23 +31,11 @@
     "rimraf": "^3.0.2",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.0",
+    "typescript": "^5.7.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.90.3",
     "webpack-bundle-analyzer": "^4.10.1",
-    "webpack-cli": "^5.1.4",
-    "eslint": "^9.17.0",
-    "globals": "^15.14.0",
-    "@aurelia/testing": "latest",
-    "stylelint": "^16.12.0",
-    "stylelint-config-standard": "^36.0.1",
-    "@aurelia/vite-plugin": "latest",
-    "vite": "^6.0.3",
-    "vitest": "^2.1.8",
-    "jsdom": "^25.0.1",
-    "@types/node": "^22.10.2",
-    "typescript": "^5.7.2",
-    "tslib": "^2.8.1",
-    "typescript-eslint": "^8.18.1"
+    "webpack-cli": "^5.1.4"
   },
   "engines": {
     "npm": ">=10.0.0 <11.0.0",
